== (1/05/17)
  * added Item Quantity support (Joe Heald)
== (10/25/16)
  * added system field custom field support
== (02/19/10)
* Lots of Documentation in the README (Tom Cocca)

== (02/17/10)
* Added I18n support (Tom Cocca)
  * Generator creates a default locale file
* Code Cleanup (Tom Cocca)
  * Removed unused modules
  * Moved all validations to the dynamic_validations module
* Some fields take an optional hash of html options (Tom Cocca)
  * Added a method to be overridden to add this options

== (02/15/10)
* Made the default hour select use 12 hour time (Tom Cocca)
  * military time is not user friendly
  * Uses the format "12 AM" or "12 PM"
  * the value is the 0-23 hour value

== (02/14/10)
* Added new field types: TimeSelect, DateSelect and DatetimeSelect (Tom Cocca)
  * Added configuration options to configure the stftime format for each field type for answer display
  * Field can require an answer or not

== (02/13/10)
* Moved the form field helper options logic out of the view and into the models to clean up the view (Tom Cocca)

== (02/07/10)
* Added ActiveRecord mixins for relationships between creator and submitter models (Tom Cocca)
  * creator:  is_form_create
  * submitter: is_form_submitter

== (02/04/10)
* Added an arrows image to make ordering a little cleaner and easier to understand (Tom Cocca)
* Removed route hack and added nice draw method (Tom Cocca)
  * Draw method taken from Thoughtbot's Clearance - thank you Thoughtbot for your great work

== (02/03/10)
* Added the ability to re-order form fields and form field options (Tom Cocca)
  * This is done using the scriptaculous Sortable Drag and Drop object
  * For form fields click on the Field Type label
  * From form field options grab the re-order text

== (02/02/10)
* Rewrote the forms/form_fields/form_field_options to use accepts_nested_attributes_for (Tom Cocca)
* Added a default prototype JS file and a helper method to include that file (Tom Cocca)