@@ -33,8 +33,6 @@ module DynamicForms
 
     ActiveRecord::Base.send(:include, DynamicForms::Relationships)
 
-    ActionView::Helpers::AssetTagHelper.register_javascript_expansion :dynamic_forms_prototype => [
-     '/javascripts/dynamic_forms/dynamic_forms_prototype'
-    ]
+    config.assets.precompile += %w(dynamic_forms/dynamic_forms_prototype.js)
   end
 end
