@@ -33,7 +33,7 @@ module DynamicForms
       module NamedScopes
         def self.included(model)
           model.class_eval do
-            scope :active, where(:active => true)
+            scope :active, -> { where(:active => true) }
           end
         end
       end
@@ -44,12 +44,12 @@ module DynamicForms
             belongs_to :creator, :polymorphic => true
 
             has_many :form_fields,
-                     :order => 'position ASC',
+                     -> { order('position ASC')} ,
                      :dependent => :destroy,
                      :class_name => "::FormField"
 
             has_many :form_submissions,
-                     :order => 'created_at DESC',
+                     -> { order('created_at DESC') },
                      :class_name => "::FormSubmission",
                      :dependent => :destroy do
               # Takes the pain out of creating a form submission object!
