@@ -1,3 +1,8 @@
+== (01/09/18)
+ * update scopes in for Form and FormField to work for Rails4
+ * Update engine to precompile dynamic_forms.js
+ * version bump/tag to 0.1.0 for Rails4
+
 == (1/05/17)
   * added Item Quantity support (Joe Heald)
 == (10/25/16)
